--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     height: 100%;
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
+    background-color: black;
 }
 
 body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header, footer, form, fieldset, legend, a {
@@ -48,6 +49,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     align-items: center;
     max-height: 0;
     opacity: 0;
+    overflow: hidden;
     transition: max-height .8s ease-in-out, opacity .3s ease-in-out;
 }
 
@@ -94,18 +96,10 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 .home-section {
     width: 100%;
-    height: 110vh;
+    height: 110dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    /*
-    background-color: ghostwhite;
-    background-image: url(images/iphone2.jpg);
-    background-position: center;
-    background-size: cover;
-    */
-
     position: relative;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0) 100%);
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0) 100%);
@@ -134,6 +128,17 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 .home__titles {
     margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.home-title {
+    overflow: hidden;
+    width: min-content;
+    padding: 5px 15px;
+    align-self: center;
 }
 
 .home__h2 {
@@ -141,6 +146,38 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     text-align: center;
     color: var(--font-color);
     text-shadow: 5px 5px 20px #000;
+}
+
+.home__h2-1 {
+    animation: aparecer-texto1 1.4s .2s both ease-in-out;
+}
+
+.home__h2-2 {
+    animation: aparecer-texto2 1.4s 1.2s both ease-in-out
+}
+
+.home__h2-3 {
+    animation: aparecer-texto1 1.4s 2s both ease-in-out
+}
+
+@keyframes aparecer-texto1 {
+    from {
+        transform: translateX(-120%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes aparecer-texto2 {
+    from {
+        transform: translateY(110%);
+    }
+
+    to {
+        transform: translateY(0);
+    }
 }
 
 .home__paragraph-container {
@@ -155,6 +192,17 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     text-shadow: 5px 5px 20px #000;
     mix-blend-mode: luminosity;
     font-weight: bold;
+    animation: aparecer 1.5s 3.15s both ease-in-out
+}
+
+@keyframes aparecer {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .bottom-wrapper {
@@ -164,7 +212,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     height: 100%;
     justify-content: end;
     align-items: center;
-    margin-bottom: 10vh;
+    margin-bottom: 10dvh;
 }
 
 #bottom-icon {
@@ -197,7 +245,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 
 
-/* ----- PHONES SECTION ----- */
+/* ----- MAIN SECTION ----- */
 
 .main-section {
     width: 100%;
@@ -205,11 +253,13 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
+    mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 95%, rgba(0, 0, 0, 0) 100%);
+    -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 95%, rgba(0, 0, 0, 0) 100%);
 }
 
 .phones-section, .service-section {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -229,11 +279,15 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 .service-title, .phones-title {
     font-size: 2.5rem;
+    transform: translateY(200%) scale(.8);
+    opacity: 0;
 }
 
 .service-paragraph, .phones-paragraph {
     max-width: 80%;
-    margin-top: 5%;
+    margin-top: 10%;
+    transform: translateY(150%) scale(.8);
+    opacity: 0;
 }
 
 .video2, .video1 {
@@ -246,4 +300,121 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     filter: blur(4px) contrast(1.2) brightness(.3);
     opacity: .85;
     object-fit: cover;
+}
+
+.phones-images-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cellphone1, .broken-phone, .destornillador {
+    width: 45%;
+    max-width: 150px;
+    transform: translateY(100px) scale(.7);
+    opacity: 0;
+}
+
+.cheap-img {
+    width: 35%;
+    height: 35%;
+    max-width: 100px;
+    place-self: center;
+    transform: translateY(100px) scale(.7);
+    opacity: 0;
+}
+
+.phones-images-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 35%;
+}
+
+
+
+/* ----- GALLERY SECTION ----- */
+
+.gallery-section {
+    width: 100%;
+    min-height: 100dvh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.4rem;
+}
+
+.gallery-title {
+    color: var(--font-color);
+    margin: 2rem;
+}
+
+.gallery-wrapper-father {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #2d2d2d;
+    border-radius: 20px;
+}
+
+.gallery-wrapper-son {
+    width: 85%;
+    margin: 1em 0;
+    display: grid;
+    min-height: 350dvh;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.gallery-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.gallery-container img {
+    position: absolute;
+    height: 50dvh;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.gallery-image.after {
+    opacity: 0;
+}
+
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+}
+
+.lightbox.active {
+    opacity: 1;
+    pointer-events: auto;
 }
