--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 .home-section {
     width: 100%;
     height: 110svh;
+    min-height: 110vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -213,6 +214,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     justify-content: end;
     align-items: center;
     margin-bottom: 10svh;
+    margin-bottom: 100px;
 }
 
 #bottom-icon {
@@ -260,6 +262,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 .phones-section, .service-section {
     width: 100%;
     height: 100svh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -339,7 +342,6 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 .gallery-section {
     width: 100%;
-    min-height: 100svh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -367,7 +369,8 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     width: 85%;
     margin: 1em 0;
     display: grid;
-    min-height: 350svh;
+    height: 350svh;
+    min-height: 350vh;
     grid-template-columns: 1fr;
     place-items: center;
 }
@@ -386,6 +389,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 .gallery-container img {
     position: absolute;
     height: 50svh;
+    min-height: 50vh;
     transition: opacity 0.5s ease-in-out;
 }
 
@@ -399,6 +403,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     left: 0;
     width: 100vw;
     height: 100svh;
+    min-height: 100vh;
     background: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: center;
