--- a/style.css
+++ b/style.css
@@ -96,8 +96,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 .home-section {
     width: 100%;
-    height: 110svh;
-    min-height: 110vh;
+    height: calc(var(--real-height) * 1.1);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -213,8 +212,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     height: 100%;
     justify-content: end;
     align-items: center;
-    margin-bottom: 10svh;
-    margin-bottom: 100px;
+    margin-bottom: calc(var(--real-height) * 0.10)
 }
 
 #bottom-icon {
@@ -261,8 +259,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 .phones-section, .service-section {
     width: 100%;
-    height: 100svh;
-    min-height: 100vh;
+    height: var(--real-height);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -369,8 +366,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     width: 85%;
     margin: 1em 0;
     display: grid;
-    height: 350svh;
-    min-height: 350vh;
+    height: calc(var(--real-height) * 3.5);
     grid-template-columns: 1fr;
     place-items: center;
 }
@@ -388,8 +384,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
 
 .gallery-container img {
     position: absolute;
-    height: 50svh;
-    min-height: 50vh;
+    height: calc(var(--real-height) * 0.5);
     transition: opacity 0.5s ease-in-out;
 }
 
@@ -402,8 +397,7 @@ body, div, span, label, h1, h2, h3, h4, input, p, b, i, li, ul, section, header,
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100svh;
-    min-height: 100vh;
+    height: var(--real-height);
     background: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: center;
