--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
 
 body, html {
     width: 100%;
-    height: auto;
-    min-height: var(--real-height);
+    height: 100%;
     overflow-x: hidden;
 }
 
